third commit No.5 Component States

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 .App-intro {
   font-size: large;
 }
+
 .card {
   display: inline-block;
   text-align: center;
@@ -31,6 +32,11 @@
   user-select: none;
  }
  
+ .activeCard {
+  color: red;
+  background: pink;
+ }
+
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
